--- a/static/css/bingo-style.css
+++ b/static/css/bingo-style.css
@@ -1,21 +1,12 @@
-body,html{
-    height: 100vh;
-    overflow: hidden;
-}
-
-*{
-    margin: 0;
+.bingo-body {
+    display: flex;
+    align-items: center;
+    width: 100vw;
+    height: 100%;
 }
 
 .hidden{
 	display: none !important;
-}
-
-body{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
 }
 
 h2{
@@ -81,18 +72,28 @@ h2{
 
 .grid{
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(8, 1fr);
-    width: 90%;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    align-content: center;
+    flex-grow: 1;
     height: 70%;
-}
 
-.case{
-    border: 1px solid #000;
-    padding: 10px;
-    font-size: 15px;
+    margin: auto 7em;
+    text-align: center;
 }
+.grid > * {
+    align-content: center;
 
-.case:hover{
-    background-color: #c5c5c5;
+    margin: .5em;
+
+    border-radius: var(--border-radius);
+    background: var(--background-dark);
+}
+.grid > *:hover{
+    /* background-color: #c5c5c5; */
+    outline: var(--outlineThickness) solid var(--neon-blue);
+    border: var(--outlineThickness) solid var(--neon-pink);
+    animation-name: outlineHover;
+    animation-iteration-count: infinite;
+    animation-duration: 2s;
 }
