--- a/static/css/global.css
+++ b/static/css/global.css
@@ -18,6 +18,7 @@
     --text: white;
 
     --border-radius: 3em;
+    --outlineThickness: 3px;
 
     background-image: url("/static/images/background.png");
     background-size: 100% auto;
@@ -73,6 +74,7 @@ input[type=submit], input[type=button], button {
 
 input:hover, button:hover, input:active, button:active {
     outline: var(--outlineThickness) solid var(--neon-blue);
+    border: var(--outlineThickness) solid var(--neon-pink);
     animation-name: outlineHover;
     animation-iteration-count: infinite;
     animation-duration: 2s;
@@ -84,7 +86,6 @@ input:hover, button:hover, input:active, button:active {
     margin: auto;
     padding: 3em;
 
-    --outlineThickness: 3px;
     outline: var(--outlineThickness) solid var(--neon-blue);
     border:  var(--outlineThickness) solid var(--neon-pink);
 
