--- a/templates/bingo.html
+++ b/templates/bingo.html
@@ -20,31 +20,31 @@
             </div>
 
             <div class="grid">
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
-                <div draggable="false">Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
+                <div>Test</div>
             </div>
 
 
