--- a/templates/bingo.html
+++ b/templates/bingo.html
@@ -52,6 +52,20 @@
             </div>
             <div class="neutral padding-20 hidden">
             </div>
+            <div class="score">
+                <div>
+                    <span class="red">&#9632</span>
+                    <p>0</p>
+                </div>
+                <div>
+                    <span class="grey">&#9632</span>
+                    <p>0</p>
+                </div>
+                <div>
+                    <span class="blue">&#9632</span>
+                    <p>0</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
