--- a/static/css/bingo-style.css
+++ b/static/css/bingo-style.css
@@ -5,33 +5,32 @@
     height: 100%;
 }
 
-.hidden{
-	display: none !important;
-}
-
-h2{
-    font-size: 20px;
-    font-weight: normal;
-}
-
 .team-box {
     display: flex;
     flex-direction: column;
     align-items: center;
+    align-content: center;
 
-    min-height: 20%;
-    --teamColor: grey;
+    min-height: 80%;
+    --teamColor: #333333;
     background: var(--teamColor);
 }
-.team-box > * {
-    margin: 1em .5em;
+.team-box > p {
+    margin: .2em .5em;
+    font-size: 110%;
 }
 
 #teamNeutral {
     flex-direction: row;
 
     min-height: 0;
-    min-width: 20%;
+    min-width: 80%;
+
+    border-top-left-radius: var(--border-radius);
+    border-top-right-radius: var(--border-radius);
+}
+#teamNeutral > p {
+    margin: .5em 1em;
 }
 
 .actions{
@@ -50,36 +49,6 @@ h2{
     border-left: 2px solid #000;
 }
 
-.team1{
-    border-bottom: 2px solid crimson;
-    border-top: crimson solid 2px;
-    border-right: crimson solid 2px;
-}
-
-.team2{
-    border-bottom: royalblue solid 2px;
-    border-top: royalblue solid 2px;
-    border-left: royalblue solid 2px;
-}
-
-.neutral{
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-
-    display: flex;
-    flex-direction: row;
-
-    background-color: #848484;
-
-    border-top : 2px solid #000;
-    border-right: 2px solid #000;
-    border-left: 2px solid #000;
-
-    padding: 20px;
-}
-
 .grid{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -94,7 +63,9 @@ h2{
 .grid > * {
     align-content: center;
 
-    margin: .5em;
+    margin: .3em;
+    border: var(--outlineThickness) solid transparent;
+    padding: .5em;
 
     border-radius: var(--border-radius);
     background: var(--background-dark);
@@ -121,16 +92,4 @@ h2{
     font-size: 20px;
     display: flex;
     padding: 10px;
-}
-
-.red{
-    color: red;
-}
-
-.grey{
-    color: grey;
-}
-
-.blue{
-    color: blue;
 }
