--- a/templates/requests.html
+++ b/templates/requests.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="/static/css/requests-style.css">
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script type="module" src="/static/script/requests.js"></script>
 </head>
 <body>
     <div id="requests" class="grid">
         {% for request in requests %}
-            <div class="request {% if request.team == "blu" %} blue {% else %} red {% endif %}">
+            <div class="request {{  request.team }}">
                 <p>Team : {{ request.team }}</p>
-                <p>Défi : {{ bingo[request.challenge].text }}</p>
-                <div class="button">
-                    <button id="{{ request.challenge }}" class="check" value="{{ request.team }}">Valider</button>
-                    <button id="{{ request.challenge }}" class="refuse" value="{{ request.team }}">Refuser</button>
+                <p>Défi : {{ bingo[request.index].text }}</p>
+                <div class="buttons">
+                    <button id="{{ request.index }}" class="check" value="{{ request.team }}">Valider</button>
+                    <button id="{{ request.index }}" class="refuse" value="{{ request.team }}">Refuser</button>
                 </div>
             </div>
         {% endfor %}
