--- a/static/css/requests-style.css
+++ b/static/css/requests-style.css
@@ -4,6 +4,7 @@ body{
 
 .grid{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     gap: 1em;
 }
@@ -14,7 +15,7 @@ body{
     justify-content: space-between;
     border: solid black 2px;
     padding: 1em;
-    width: 15em;
+    width: 18em;
     border-radius: 1em;
 }
 
@@ -29,7 +30,17 @@ body{
     background-color: #2a2a2a;
     border: none;
     border-radius: 1em;
-    padding: 0.5em;
+    padding: 0.6em;
+    width: 7em;
+    height: 3em;
+}
+
+.check:hover{
+    background-color: darkgreen;
+}
+
+.refuse:hover{
+    background-color: #b00c0c;
 }
 
 .red{
