--- a/templates/bingo.html
+++ b/templates/bingo.html
@@ -20,7 +20,7 @@
                 id="teamRed"
                 class="team-box"
                 style="
-                    --teamColor: #b00c0c;
+                    --teamColor: var(--teamRed);
                     border-top-right-radius: var(--border-radius);
                     border-bottom-right-radius: var(--border-radius);
                 "
@@ -36,7 +36,7 @@
                 id="teamBlue"
                 class="team-box"
                 style="
-                    --teamColor: #063eb8;
+                    --teamColor: var(--teamBlue);
                     border-top-left-radius: var(--border-radius);
                     border-bottom-left-radius: var(--border-radius);
                 "
