--- a/templates/bingo.html
+++ b/templates/bingo.html
@@ -44,5 +44,21 @@
 
         </div>
         <div id="teamNeutral" class="team-box"></div>
+
+        <dialog id="challengeDialog">
+            <div>
+                <div class="box" style="flex-direction: column;">
+                    <h2>Confirmer la complétion de l'épreuve</h2>
+                    <div>texte</div>
+                </div>
+                <div style="display: flex; margin-top: 1em;">
+                    <div style="flex-grow: 1;"></div>
+                    <button id="challangeDialogClose">Fermer</button>
+                    <button id="challengeDialogUnchallenge">Départiciper</button>
+                    <button id="challangeDialogCheck">Faire Valider</button>
+                    <div style="flex-grow: 1;"></div>
+                </div>
+            </div>
+        </dialog>
     </body>
 </html>
