--- a/templates/bingo.html
+++ b/templates/bingo.html
@@ -49,13 +49,13 @@
             <div>
                 <div class="box" style="flex-direction: column;">
                     <h2>Confirmer la complétion de l'épreuve</h2>
-                    <div>texte</div>
+                    <div id="challengeDialogText">texte</div>
                 </div>
                 <div style="display: flex; margin-top: 1em;">
                     <div style="flex-grow: 1;"></div>
-                    <button id="challangeDialogClose">Fermer</button>
+                    <button id="challengeDialogClose">Fermer</button>
                     <button id="challengeDialogUnchallenge">Départiciper</button>
-                    <button id="challangeDialogCheck">Faire Valider</button>
+                    <button id="challengeDialogCheck">Faire Valider</button>
                     <div style="flex-grow: 1;"></div>
                 </div>
             </div>
