fixed bugs on confirm dialog

--- a/templates/bingo.html
+++ b/templates/bingo.html
@@ -60,5 +60,9 @@
                 </div>
             </div>
         </dialog>
+
+        <div class="box notification">
+            Hello
+        </div>
     </body>
 </html>
