--- a/templates/bingo.html
+++ b/templates/bingo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Bingo Spoon 3</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+{#        <meta name="viewport" content="width=device-width, initial-scale=1" />#}
         <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
         <script type="module" src="/static/script/bingo.js"></script>
         <link rel="stylesheet" href="/static/css/global.css">
