--- a/templates/requests.html
+++ b/templates/requests.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Request</title>
     <link rel="stylesheet" href="/static/css/requests-style.css">
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script type="module" src="/static/script/requests.js"></script>
