did the funny little notification popup

--- a/static/css/bingo-style.css
+++ b/static/css/bingo-style.css
@@ -19,6 +19,7 @@
     min-height: 80%;
     --teamColor: #333333;
     background: var(--teamColor);
+    text-shadow: black .2em .2em .1em;
 }
 .team-box > p {
     margin: .2em .5em;
@@ -91,6 +92,27 @@
     padding: 10px;
 }
 
+.notification {
+    display: block;
+    position: absolute;
+    right: 1em;
+    bottom: 1em;
+    max-width: 20em;
+
+    padding: 1.5em;
+
+    --n-color: var(--background-dark);
+    background-color: color-mix(in oklab, var(--n-color) 50%, var(--background-light));
+    text-shadow: black .2em .2em .1em;
+
+    animation-name: notificationPopup;
+    animation-duration: 6s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-timing-function: cubic-bezier(0.95, 0.05, 0.795, 0.035);
+}
+
+
 dialog:modal {
     display: flex;
     flex-direction: column;
@@ -101,6 +123,12 @@ dialog:modal {
 }
 dialog > * { margin: auto; }
 dialog > * > *:nth-child(2) > * { margin: 0em 1em; }
+dialog::backdrop {
+    background-image: url("/static/images/background.png");
+    background-size: 100% auto;
+    background-repeat: repeat-y;
+    opacity: .6;
+}
 
 @property --animationCounter {
     syntax: "<number>";
@@ -115,3 +143,22 @@ to {
     --animationCounter: 1;
 }
 }
+
+@keyframes notificationPopup {
+from {
+    scale: 0;
+    opacity: 1;
+}
+3% {
+    scale: 1;
+    translate: 0 0;
+}
+99% {
+    translate: 0 -100%;
+    opacity: 0;
+}
+to {
+    translate: 0 -30000%;
+}
+}
+
