--- a/templates/bingo.html
+++ b/templates/bingo.html
@@ -61,8 +61,7 @@
             </div>
         </dialog>
 
-        <div class="box notification">
-            Hello
+        <div id="notificationElem" class="box notification" style="display: none;">
         </div>
     </body>
 </html>
